app/assets/stylesheets/application.css.less
/* ... */
.accomodation-wrapper {
  .header{
    padding: 10px 0;
    position: relative;
    .clearfix();
    overflow: visible;
    _zoom: 1;
    border-top: 1px solid #eee;
    
    .title{
      width: 78%;
      float: left;
      .button_favorite {
        float:left;
        margin:6px 10px 0 0;
      }
      h1{
        line-height: 1.2em;
        margin-bottom: 15px;
        border-bottom: 1px solid #eee;
        padding-bottom: 10px;
      }
      .buttons {
        position:absolute;left:550px;top:14px;
        form {margin:0;float:right;}
        .btn {
          float:right;
          margin-right:2px;
        }
      }
      .meta{
        .clearfix();
        overflow: hidden;
        _zoom: 1;
        
        p{
          color: #888;
          float: left;
          width: 65%
        }      
        .share{
          float: right;          
        }              
      }
    } // header    
    
    .focal{
      width: 180px;
      height: 180px;
      background: transparent url(badge.png) no-repeat 0 0;
      padding: 5px 0px 10px;
      position: absolute;
      top: -15px;
      right: 0;
      z-index: 1;
      text-align:center;

      .btn{
        padding:9px 45px;
      }      
      
      .price{
        color: #fff;
        text-shadow: 0 -1px #ff6600;        
        line-height: 1;
        padding: .5em 0 0;
        margin-bottom: 0;
        
        
        .sub{
          margin-bottom: 10px;
          font-size: 11px;
          padding: 10px 0;
          letter-spacing: 0.025em;
          font-weight: normal;
          display: block;
          text-transform: uppercase;
          
        }        
      }      
    }
  }

  .tabs{
    margin-bottom: 11px;
  }
  
  .description{
    margin: 20px 0;
  } 
}

.fine-print{
  clear: both;
  margin:  15px 0;
  padding: 10px 0;

  
  .col{
    .clearfix();
    overflow: hidden;
    _zoom: 1;
    
    label{
      float: left;
      color: #353535;
      background: none;
      text-align: left;
      margin-right: 10px;
      font-size:10px;
      width:75px;
    }

    label.sm {
      width:40%;
      height:20px;
    }
    
    .value{
      float: right;
      text-align:right;
      width: 75px;
      font-weight: normal;
    }
    .value.sm {
      width:50%;
      height:20px;
    }
    .value.bigger{
      width:100px;
    }
    
    label,.value{
      padding: 5px 0;
      line-height: 20px;
    }
  }  
}


ul.references{
  list-style-type: none;
  margin: 0 0 20px 0;
  
  li{
    padding: 3px 0 3px 25px;
    
    &.check{
      background: transparent url(icons/icon.check.png) no-repeat 0 center;
    }
    &.reviews{
      background: transparent url(icons/icon.smile.png) no-repeat 0 center;
    }
    &.response{
      background: transparent url(icons/icon.response.png) no-repeat 0 center;
    }
    &.friends{
      background: transparent url(icons/icon.people.png) no-repeat 0 center;
    }    
  }
} // references

// Search
// ------------
.search-bar-container{
  &.sticky {
    background: transparent url(bg.spillover.png) repeat-x left 0px;
    /*background-color: white;*/
    padding: 20px 0 0;
    position: fixed;
    top: 40px;
    width: 700px;

    + .results {
      margin-top: 105px;
    }
  }  
}

.search-bar{  
  background: #f8f8f8;
  border: 1px solid #c0c0c0;
  padding: 10px 10px 0 10px;
/*  .border-radius(5px);*/
  .clearfix();
  overflow: hidden;
  _zoom: 1;
  margin-bottom: 20px;

  input#check_in, input#check_out {width:84px;}
  h2 {line-height:23px;}

  form{
    margin: 0;
    .floatLeft();
  }
  
  fieldset{
    padding: 0;
    margin: 0;
  }
  
  .clearfix{
    margin: 0;
  }
  
  .input,
  .loc-filter{
    .floatLeft();
    margin: 0;
  }
  .loc-filter{
    padding-top: 2px;
    margin-left: 10px;
    
    a{
     font-size: 11px; 
    }    
  }

  .controls {

    select {
      width: 180px;
    }
  }


  .views {
    .clearfix();
    height: 30px;
    a{
      width: 24px;
      height:24px;
      .border-radius(2px);
      margin-left: 10px;
      opacity: 0.2;
      float: right;
    }
    .sorting { float: left; }
    .toggle  { float: right;}
    a.current{ opacity: 1;}
    
    .disp-list{
      background: transparent url(icon.list.png) no-repeat center center;
    }

    .disp-gallery{
      background: transparent url(icon.gallery.png) no-repeat center center;
    }    
  }
}

// Search Aside

.search-aside{
  background-color: white;
  label {
    display: inline;
  }
  .toggle{
    .btn{
      width: 108px;
      margin-bottom: 3px;
    }
  }

  &.sticky {
    position: fixed;
    top: 40px;
    padding-top:20px;
    width: 220px;
  }
}


.panel-wrap{
  ul{
	  list-style-type: none;
	  margin: 0;
	}		
}


// 
// My Places
.my_places {
  .edit_button a.btn { float:right; }
  .place_status { width: 40px; text-align: center; } 
}

// 
// Profile
.edit_profile_page, .profile_page {
  .section-header {
    a.settings {
      font-size:12px;
      float:right;
    }
  }
  h2.name {
    font-size:14px;
    overflow:hidden;
    white-space:nowrap;
  }
  .address {
    font-size:11px;
    color:#333;
  }
  .user_box {
    border-bottom: 1px solid #EEEEEE;
    height: 60px;
    margin-bottom: 10px;
    .user_name {
      font-size:11px;
      white-space:nowrap;
      overflow:hidden;
    }
  }
  .link_accounts {
    h4 {
      font-size:13px;
      margin-bottom:10px;
    }
    a {
      margin-left:4px;
    }
  }
  table.user_info {
    width:100%;
    td {
      padding:8px;
    }
  }
}

.ui-datepicker
{
   z-index: 10003 !important; /* must be > than popup editor (1002) */
}


table.borderless,
table.borderless td {border:0}
table.borderless td {width:50%}
table.borderless td.label_detail {color:#777;text-align:right;}
select#bank_account_holder_country_code,
select#address_country {width:200px;}
/* ... */

